Update WED between architectures.ipynb

--- a/WED between architectures.ipynb
+++ b/WED between architectures.ipynb
@@ -37,9 +37,9 @@
    "outputs": [],
    "source": [
     "\n",
-    "koi_116 = np.load('C:\\\\Users\\PC\\Desktop\\KeplerOccurrenceEstimates\\Planetary System Distance\\WED_MSED Text\\Github Code\\koi_116.npz')['arr_0']  \n",
-    "koi_117 = np.load('C:\\\\Users\\PC\\Desktop\\KeplerOccurrenceEstimates\\Planetary System Distance\\WED_MSED Text\\Github Code\\koi_117.npz')['arr_0'] \n",
-    "koi_137 = np.load('C:\\\\Users\\PC\\Desktop\\KeplerOccurrenceEstimates\\Planetary System Distance\\WED_MSED Text\\Github Code\\koi_137.npz')['arr_0']\n"
+    "koi_116 = np.load('koi_116.npz')['arr_0']  \n",
+    "koi_117 = np.load('koi_117.npz')['arr_0'] \n",
+    "koi_137 = np.load('koi_137.npz')['arr_0']\n"
    ]
   },
   {
