Update WED between architectures.ipynb

--- a/WED between architectures.ipynb
+++ b/WED between architectures.ipynb
@@ -7,7 +7,7 @@
     "# WED between architectures\n",
     "\n",
     "This notebook will demonstrate how to use WED to compare between architecutes.\n",
-    "As usual, let's start by importing some package:"
+    "As usual, let's start by importing required packages:"
    ]
   },
   {
