Update WED between architectures.ipynb

--- a/WED between architectures.ipynb
+++ b/WED between architectures.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To estimate the WED between these architectures, we can simply use:"
+    "To estimate the WED between these architectures, we can simply use (note the use of log scale in planet period and radius proprties):"
    ]
   },
   {
@@ -108,9 +108,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The WED between KOI-116 and KOI-117, is:  0.6312136991728325\n",
-      "The WED between KOI-117 and KOI-137, is:  0.6422871776979321\n",
-      "The WED between KOI-116 and KOI-137, is:  0.8219146025435042\n"
+      "The WED between KOI-116 and KOI-117, is:  0.631\n",
+      "The WED between KOI-117 and KOI-137, is:  0.642\n",
+      "The WED between KOI-116 and KOI-137, is:  0.822\n"
      ]
     }
    ],
