Update WED between architectures.ipynb

--- a/WED between architectures.ipynb
+++ b/WED between architectures.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To estimate the WED between these architectures, we can simply use (note the use of log scale in planet period and radius proprties):"
+    "To estimate the WED between these architectures, we can simply use (note the use of log scale in planet period and radius properties):"
    ]
   },
   {
