--- a/WED between architectures.ipynb
+++ b/WED between architectures.ipynb
@@ -124,6 +124,13 @@
     "print('The WED between KOI-116 and KOI-137, is: ',WED([(np.log10(pl[0]), np.log10(pl[1]), pl[2]) for pl in koi_116],\n",
     "                                                      [(np.log10(pl[0]), np.log10(pl[1]), pl[2]) for pl in koi_137]))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we import 3 Kepler high-multiplicity planet systems:"
+   ]
   }
  ],
  "metadata": {
