Update WED between architectures.ipynb

--- a/WED between architectures.ipynb
+++ b/WED between architectures.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we import 3 Kepler high-multiplicity planet systems:"
+    "As can be clearly seen (qulitativly) from the plot above, the WED is higher (larger dissimilarity) between KOI-116 and KOI-137."
    ]
   }
  ],
