Update Using ICED to compare between planetary catalouges.ipynb

--- a/Using ICED to compare between planetary catalouges.ipynb
+++ b/Using ICED to compare between planetary catalouges.ipynb
@@ -9,7 +9,7 @@
     "This notebook will demonstrate how to use ICED to compare between planetary catalouges.\n",
     "We assume that some elementary usage of WED to compare between planetary system architecutes is known, but if not, please check out <a href=\"https://github.com/dolevbas/PASSta/blob/main/WED%20between%20architectures.ipynb\">this link</a> prior to reading following example.  \n",
     "\n",
-    "As usual, let's start by importing some package:"
+    "As usual, let's start by importing some packages:"
    ]
   },
   {
@@ -19,7 +19,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    
     "import random\n",
+    
     "from PASSta import ICED"
    ]
   },
