Update Using ICED to compare between planetary catalouges.ipynb

--- a/Using ICED to compare between planetary catalouges.ipynb
+++ b/Using ICED to compare between planetary catalouges.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's repeat this approch and create two simulated catalouges where we noise the orbital periods of all planets at all systems by two diffrent STD: sig_i = 0.1; sig_ii = 0.2: "
+    "Now, let's repeat this approch and create two simulated catalouges where we noise the orbital periods of all planets at all systems by two diffrent STD: sig_i = 0.01; sig_ii = 0.1: "
    ]
   },
   {
@@ -111,8 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The distance between our catalouge and simulated catalouge i, is:  0.21009604832129808\n",
-      "The distance between our catalouge and simulated catalouge ii, is:  0.46194201918189826\n"
+      "The distance between our catalouge and simulated catalouge i, is:  0.210\n",
+      "The distance between our catalouge and simulated catalouge ii, is:  0.462\n"
      ]
     }
    ],
@@ -161,8 +161,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The distance between our catalouge and simulated catalouge iii, is:  0.340168719112486\n",
-      "The distance between our catalouge and simulated catalouge iv, is:  0.4956547308073521\n"
+      "The distance between our catalouge and simulated catalouge iii, is:  0.340\n",
+      "The distance between our catalouge and simulated catalouge iv, is:  0.496\n"
      ]
     }
    ],
