--- a/Using ICED to compare between planetary catalouges.ipynb
+++ b/Using ICED to compare between planetary catalouges.ipynb
@@ -63,7 +63,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[(1.6419145624189568, 0.41161970596323016, 4.77), (0.789927231125317, -0.07058107428570728, 0.63), (1.3798534311333521, -0.004364805402450088, 0.83), (1.132604369083732, 0.37106786227173627, 4.02)], [(1.168766556072491, 0.48713837547718647, 6.55), (0.6903235196686178, 0.2648178230095365, 2.58), (0.5024304843879298, 0.1903316981702915, 1.89), (0.9008204243717448, 0.029383777685209667, 0.96)], [(0.8831826829113397, 0.6972293427597176, 15.79), (1.1719870308236195, 0.7752462597402364, 21.9), (0.544649306290662, 0.3242824552976926, 3.31)]]\n"
+      "[[(1.64, 0.41, 4.77), (0.78, -0.07, 0.63), (1.38, -0.0043, 0.83), (1.13, 0.37, 4.02)], \n",
+      "[(1.17, 0.49, 6.55), (0.69, 0.26, 2.58), (0.50, 0.19, 1.89), (0.90, 0.029, 0.96)], \n",
+      "[(0.88, 0.69, 15.79), (1.17, 0.77, 21.9), (0.54, 0.32, 3.31)]]\n"
      ]
     }
    ],
@@ -175,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, we find larger distance (larger dissimilarity) between our original catalouge and the generated catalouge with lower planet multiplicity."
+    "As expected, we find larger distance (larger dissimilarity) between our original catalouge and the simulated catalouge having lower planet multiplicity."
    ]
   }
  ],
