Update Using ICED to compare between planetary catalouges.ipynb

--- a/Using ICED to compare between planetary catalouges.ipynb
+++ b/Using ICED to compare between planetary catalouges.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using ICED to compare between planetary catalouges\n",
+    "# Using ICED to compare between planetary Catalogues\n",
     "\n",
-    "This notebook will demonstrate how to use ICED to compare between planetary catalouges.\n",
+    "This notebook will demonstrate how to use ICED to compare between planetary catalogues.\n",
     "We assume that some elementary usage of WED to compare between planetary system architecutes is known, but if not, please check out <a href=\"https://github.com/dolevbas/PASSta/blob/main/WED%20between%20architectures.ipynb\">this link</a> prior to reading following example.  \n",
     "\n",
     "As usual, let's start by importing some packages:"
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we import 3 Kepler high-multiplicity planet systems and use them as our planetary sample (catalouge):"
+    "Next, we import 3 Kepler high-multiplicity planet systems and use them as our planetary sample (catalogue):"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our catalouge is consisted of 3 planetary systems, where two systems have 4 planets and one system has 3 planets. For each system we list the planets orbital periods and radii (in log scale) and estimate of planet mass:"
+    "Our catalogue is consisted of 3 planetary systems, where two systems have 4 planets and one system has 3 planets. For each system we list the planets orbital periods and radii (in log scale) and an estimate of planet mass:"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's repeat this approch and create two simulated catalouges where we noise the orbital periods of all planets at all systems by two diffrent STD: sig_i = 0.01; sig_ii = 0.1: "
+    "Now, let's repeat this approach and create two simulated catalogues where we noise the orbital periods of all planets at all systems by two diffrent STDs: sig_i = 0.01; sig_ii = 0.1: "
    ]
   },
   {
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use ICED to estimate the difference between our original catalouge and the two simulated catalouges:"
+    "We can use ICED to estimate the difference between our original catalogue and the two simulated catalogues:"
    ]
   },
   {
@@ -127,14 +127,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, we find larger distance (higher dissimilarity) between our original catalouge and the generated catalouge with higher STD."
+    "As expected, we find larger distance (higher dissimilarity) between our original catalogue and the generated catalogue with higher STD."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we shall produce two simulated catalouges where we change planet muliplicity of each system, allowing it to range between 2-max number of avlaibale planets (case iii), and 0-max number of avlaibale planets (case iv):"
+    "Next, we shall produce two simulated catalogues where we change planet muliplicity of each system, allowing it to range between 2-max number of avlaibale planets (case iii), and 0-max number of avlaibale planets (case iv):"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and as before, we can use ICED to estimate the difference between our original catalouge these two simulated catalouges:"
+    "and as before, we can use ICED to estimate the difference between our original catalogue and these two simulated catalogues:"
    ]
   },
   {
@@ -163,21 +163,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The distance between our catalouge and simulated catalouge iii, is:  0.340\n",
-      "The distance between our catalouge and simulated catalouge iv, is:  0.496\n"
+      "The distance between our catalouge and simulated catalogue iii, is:  0.340\n",
+      "The distance between our catalouge and simulated catalogue iv, is:  0.496\n"
      ]
     }
    ],
    "source": [
-    "print('The distance between our catalouge and simulated catalouge iii, is: ', ICED(PlSysCat, PlSysCat_Simiii))\n",
-    "print('The distance between our catalouge and simulated catalouge iv, is: ', ICED(PlSysCat, PlSysCat_Simiv))"
+    "print('The distance between our catalogue and simulated catalogue iii, is: ', ICED(PlSysCat, PlSysCat_Simiii))\n",
+    "print('The distance between our catalogue and simulated catalogue iv, is: ', ICED(PlSysCat, PlSysCat_Simiv))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, we find larger distance (larger dissimilarity) between our original catalouge and the simulated catalouge having lower planet multiplicity."
+    "As expected, we find larger distance (larger dissimilarity) between our original catalogue and the simulated catalogue having lower planet multiplicity."
    ]
   }
  ],
